# fastapi_project_insta

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
migrations/versions/: 23feace6f53e_updateimagecomment.py  587a77b993b1_updateimage4.py  bb0711c0b0c0_updateimage3.py  c425c3abb010_updateimage2.py  e072372b1900_updateimage4.py  e941f0b7785f_updateimage1.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  rating.py  users.py
src/routes/: auth.py  cloudinary.py  comments.py  images.py  qr.py  rating.py  search_filtering.py  users.py
src/services/: auth.py  auth_decorators.py  upload_avatar.py
templates/: index.html
tests/: test_repository_comments.py  test_route_comments.py
